--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/lab": "^5.0.0-alpha.85",
+    "@mui/material": "^5.8.6",
+    "@mui/x-data-grid": "^6.6.0",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
     "@refinedev/devtools": "^1.1.32",
     "@refinedev/kbar": "^1.3.6",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.8.1",
-    "@refinedev/supabase": "^5.7.4",
     "@refinedev/mui": "^5.14.4",
     "@refinedev/react-hook-form": "^4.8.14",
-    "@mui/icons-material": "^5.8.3",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@mui/lab": "^5.0.0-alpha.85",
-    "@mui/material": "^5.8.6",
-    "@mui/x-data-grid": "^6.6.0",
+    "@refinedev/react-router-v6": "^4.5.5",
+    "@refinedev/supabase": "^5.7.4",
+    "prettier": "^3.3.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
-    "@refinedev/react-router-v6": "^4.5.5"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
@@ -40,7 +41,8 @@
     "dev": "refine dev",
     "build": "tsc && refine build",
     "preview": "refine start",
-    "refine": "refine"
+    "refine": "refine",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}' --ignore-path .prettierignore"
   },
   "browserslist": {
     "production": [
