--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
     "@refinedev/devtools": "^1.1.32",
+    "@refinedev/inferencer": "^4.6.6",
     "@refinedev/kbar": "^1.3.6",
     "@refinedev/mui": "^5.14.4",
     "@refinedev/react-hook-form": "^4.8.14",
