--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.8.6",
     "@mui/x-data-grid": "^6.6.0",
+    "@mui/x-date-pickers": "^7.9.0",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
     "@refinedev/devtools": "^1.1.32",
@@ -19,6 +20,7 @@
     "@refinedev/react-hook-form": "^4.8.14",
     "@refinedev/react-router-v6": "^4.5.5",
     "@refinedev/supabase": "^5.7.4",
+    "dayjs": "^1.11.11",
     "prettier": "^3.3.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
