--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.8.3",
     "@mui/lab": "^5.0.0-alpha.85",
-    "@mui/material": "^5.8.6",
+    "@mui/material": "^5.16.0",
+    "@mui/x-charts": "^7.9.0",
     "@mui/x-data-grid": "^6.6.0",
     "@mui/x-date-pickers": "^7.9.0",
     "@refinedev/cli": "^2.16.21",
@@ -20,12 +21,13 @@
     "@refinedev/react-hook-form": "^4.8.14",
     "@refinedev/react-router-v6": "^4.5.5",
     "@refinedev/supabase": "^5.7.4",
-    "dayjs": "^1.11.11",
+    "date-fns": "^3.6.0",
     "prettier": "^3.3.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
